# loader

./: CMakeLists.txt  LICENSE  README.md
include/: library.hpp
src/: library.cpp  library_posix.cpp  library_w32.cpp
test/: CMakeLists.txt  loadtest.cpp  testlib.cpp
